--- a/scss/style.scss
+++ b/scss/style.scss
@@ -442,12 +442,36 @@ textarea {
   }
 }
 
+.js-opacity {
+  opacity: 0;
+  transition: opacity .6s;
+  &.animate {
+    opacity: 1;
+  }
+}
+
 /********************/
 /* HEADER */
 
+@keyframes scale-infinite {
+  0%, 10%, 20%, 100% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+
+  15% {
+    transform: scale(1.1);
+  }
+
+}
 
 .header {
   padding-bottom: 24px;
+  &__btn {
+    animation: scale-infinite 5s infinite;
+  }
   &::before {
     content: "";
     position: absolute;
@@ -805,6 +829,30 @@ body.menu {
     position: absolute;
     left: 0;
     top: 0;
+    transform: translateY(50%);
+    opacity: 0;
+    transition: opacity .3s, transform .3s;
+    &.animate {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  .col-md-6 {
+    &:nth-of-type(2) {
+      .features__number {
+        transition-delay: .2s;
+      }
+    }
+    &:nth-of-type(3) {
+      .features__number {
+        transition-delay: .4s;
+      }
+    }
+    &:last-of-type {
+      .features__number {
+        transition-delay: .6s;
+      }
+    }
   }
 }
 
@@ -894,6 +942,19 @@ body.menu {
 /***********************/
 /* promo */
 
+@keyframes scale {
+  0%, 50%, 100% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+
+  75% {
+    transform: scale(1.1);
+  }
+}
+
 .promo {
   background: 50% 50% / cover no-repeat;
   margin-bottom: 130px;
@@ -913,6 +974,9 @@ body.menu {
   }
   &__btn {
     margin-top: 35px;
+    &.animate {
+      animation: scale 1s ease-in;
+    }
   }
 }
 
@@ -1288,6 +1352,11 @@ address {
   }
   &__text {
     margin-bottom: 25px;
+  }
+  &__btn {
+    &.animate {
+      animation: scale 1s ease-in;
+    }
   }
 }
 
