--- a/css/style.css
+++ b/css/style.css
@@ -1164,7 +1164,7 @@ body.menu .nav__li {
   margin-bottom: 130px;
   height: 505px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
