--- a/scss/style.scss
+++ b/scss/style.scss
@@ -960,7 +960,7 @@ body.menu {
   margin-bottom: 130px;
   height: 505px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   &__title {
     margin-bottom: 20px;
